Add environment configuration files and update docker-compose for Redis & Celery

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,81 @@
+version: '3.8'
+
 services:
-  backend:
-    build: ./backend
-    ports:
-      - "8000:8000"
+  db:
+    image: postgres:15-alpine
+    container_name: taskboard_postgres
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     environment:
-      - DATABASE_URL=postgresql://postgres:mhmdrz17@host.docker.internal/software_project
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  redis:
+    image: redis:7-alpine
+    container_name: taskboard_redis
+    ports:
+      - "6379:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: taskboard_backend
+    command: >
+      sh -c "python manage.py migrate &&
+             python manage.py collectstatic --noinput &&
+             gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 3"
     volumes:
       - ./backend:/app
-  frontend:
-    build: ./frontend
+      - static_volume:/app/static
     ports:
-      - "5173:5173"
+      - "8000:8000"
+    env_file:
+      - .env
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+
+  celery_worker:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: taskboard_celery_worker
+    command: celery -A config worker --loglevel=info
     volumes:
-      - ./frontend:/app
-      - /app/node_modules
+      - ./backend:/app
+    env_file:
+      - .env
+    depends_on:
+      - db
+      - redis
+      - backend
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: taskboard_frontend
+    ports:
+      - "3000:80"
+    depends_on:
+      - backend
+
+volumes:
+  postgres_data:
+  static_volume:
