Update requirements.txt with Celery, Redis, and email dependencies

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,12 @@
-Django
-djangorestframework
-django-cors-headers
-drf-spectacular
-djangorestframework-simplejwt
-psycopg2-binary
-dj-database-url
+Django>=4.2,<5.0
+djangorestframework>=3.14.0
+django-cors-headers>=4.0.0
+drf-spectacular>=0.26.0
+djangorestframework-simplejwt>=5.3.0
+psycopg2-binary>=2.9.5
+dj-database-url>=2.0.0
+python-decouple>=3.8
+gunicorn>=21.2.0
+celery[redis]>=5.3.0
+redis>=5.0.0
+markdown>=3.5.0
