Optimize Dockerfile with entrypoint and better caching

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,31 +1,39 @@
 FROM python:3.11-slim
 
 # Set environment variables
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1 \
+    PIP_NO_CACHE_DIR=1 \
+    PIP_DISABLE_PIP_VERSION_CHECK=1
 
 # Set work directory
 WORKDIR /app
 
 # Install system dependencies
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     postgresql-client \
     build-essential \
     libpq-dev \
+    netcat-openbsd \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Python dependencies
+# Install Python dependencies (separate layer for better caching)
 COPY requirements.txt /app/
 RUN pip install --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt
 
-# Copy project
+# Copy project files
 COPY . /app/
 
-# Collect static files (will be overridden by command in docker-compose)
-RUN python manage.py collectstatic --noinput || true
+# Copy and set entrypoint script permissions
+COPY entrypoint.sh /app/
+RUN chmod +x /app/entrypoint.sh
 
+# Create directories for static and media files
+RUN mkdir -p /app/staticfiles /app/media
+
+# Expose port
 EXPOSE 8000
 
-# Default command (can be overridden in docker-compose)
-CMD ["gunicorn", "config.wsgi:application", "--bind", "0.0.0.0:8000"]
+# Use entrypoint
+ENTRYPOINT ["/app/entrypoint.sh"]
