--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,13 @@
-Django>=4.2,<5.0
-djangorestframework>=3.14.0
-django-cors-headers>=4.0.0
-drf-spectacular>=0.26.0
-djangorestframework-simplejwt>=5.3.0
-psycopg2-binary>=2.9.5
-dj-database-url>=2.0.0
-python-decouple>=3.8
-gunicorn>=21.2.0
-celery[redis]>=5.3.0
-redis>=5.0.0
-markdown>=3.5.0
+Django==4.2.7
+djangorestframework==3.14.0
+django-cors-headers==4.3.1
+psycopg2-binary==2.9.9
+celery==5.3.4
+redis==5.0.1
+django-redis==5.4.0
+dj-database-url==2.1.0
+python-decouple==3.8
+gunicorn==21.2.0
+drf-spectacular==0.27.0
+Pillow==10.1.0
+django-filter==23.5
