--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,20 +7,25 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB:-taskboard_db}
+      POSTGRES_USER: ${POSTGRES_USER:-taskboard_user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-taskboard_pass}
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-taskboard_user}"]
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - taskboard_network
 
   redis:
     image: redis:7-alpine
     container_name: taskboard_redis
+    command: redis-server --appendonly yes
+    volumes:
+      - redis_data:/data
     ports:
       - "6379:6379"
     healthcheck:
@@ -28,6 +33,8 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    networks:
+      - taskboard_network
 
   backend:
     build:
@@ -35,47 +42,93 @@ services:
       dockerfile: Dockerfile
     container_name: taskboard_backend
     command: >
-      sh -c "python manage.py migrate &&
+      sh -c "python manage.py wait_for_db &&
+             python manage.py migrate &&
              python manage.py collectstatic --noinput &&
-             gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 3"
+             python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./backend:/app
-      - static_volume:/app/static
+      - static_volume:/app/staticfiles
+      - media_volume:/app/media
     ports:
       - "8000:8000"
-    env_file:
-      - .env
+    environment:
+      - DEBUG=True
+      - DATABASE_URL=postgresql://${POSTGRES_USER:-taskboard_user}:${POSTGRES_PASSWORD:-taskboard_pass}@db:5432/${POSTGRES_DB:-taskboard_db}
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/1
+      - SECRET_KEY=${SECRET_KEY:-django-insecure-dev-key-change-in-production}
+      - ALLOWED_HOSTS=*
     depends_on:
       db:
         condition: service_healthy
       redis:
         condition: service_healthy
+    networks:
+      - taskboard_network
 
   celery_worker:
     build:
       context: ./backend
       dockerfile: Dockerfile
     container_name: taskboard_celery_worker
-    command: celery -A config worker --loglevel=info
+    command: celery -A config worker --loglevel=info --concurrency=2
     volumes:
       - ./backend:/app
-    env_file:
-      - .env
+    environment:
+      - DEBUG=True
+      - DATABASE_URL=postgresql://${POSTGRES_USER:-taskboard_user}:${POSTGRES_PASSWORD:-taskboard_pass}@db:5432/${POSTGRES_DB:-taskboard_db}
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/1
+      - SECRET_KEY=${SECRET_KEY:-django-insecure-dev-key-change-in-production}
     depends_on:
       - db
       - redis
       - backend
+    networks:
+      - taskboard_network
+
+  celery_beat:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: taskboard_celery_beat
+    command: celery -A config beat --loglevel=info
+    volumes:
+      - ./backend:/app
+    environment:
+      - DEBUG=True
+      - DATABASE_URL=postgresql://${POSTGRES_USER:-taskboard_user}:${POSTGRES_PASSWORD:-taskboard_pass}@db:5432/${POSTGRES_DB:-taskboard_db}
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/1
+      - SECRET_KEY=${SECRET_KEY:-django-insecure-dev-key-change-in-production}
+    depends_on:
+      - db
+      - redis
+      - backend
+    networks:
+      - taskboard_network
 
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        - VITE_API_URL=http://localhost:8000
     container_name: taskboard_frontend
     ports:
-      - "3000:80"
+      - "5173:80"
     depends_on:
       - backend
+    networks:
+      - taskboard_network
 
 volumes:
   postgres_data:
+  redis_data:
   static_volume:
+  media_volume:
+
+networks:
+  taskboard_network:
+    driver: bridge
