--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,7 @@
 Django==4.2.7
 djangorestframework==3.14.0
-django-cors-headers==4.3.1
 psycopg2-binary==2.9.9
-celery==5.3.4
-redis==5.0.1
-django-redis==5.4.0
-dj-database-url==2.1.0
 python-decouple==3.8
+django-cors-headers==4.3.1
 gunicorn==21.2.0
-drf-spectacular==0.27.0
-Pillow==10.1.0
-django-filter==23.5
+drf-yasg==1.21.7
