--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -60,7 +60,11 @@ jobs:
 
       - name: Run migrations
         env:
-          DATABASE_URL: postgresql://test_user:test_password@localhost:5432/test_db
+          POSTGRES_DB: test_db
+          POSTGRES_USER: test_user
+          POSTGRES_PASSWORD: test_password
+          POSTGRES_HOST: localhost
+          POSTGRES_PORT: 5432
           SECRET_KEY: test-secret-key-for-ci
           DEBUG: True
         run: |
@@ -69,7 +73,11 @@ jobs:
 
       - name: Run tests with coverage
         env:
-          DATABASE_URL: postgresql://test_user:test_password@localhost:5432/test_db
+          POSTGRES_DB: test_db
+          POSTGRES_USER: test_user
+          POSTGRES_PASSWORD: test_password
+          POSTGRES_HOST: localhost
+          POSTGRES_PORT: 5432
           SECRET_KEY: test-secret-key-for-ci
           DEBUG: True
           CELERY_BROKER_URL: redis://localhost:6379/0
@@ -80,7 +88,7 @@ jobs:
           coverage xml
 
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+        uses: codecov/codecov-action@v4
         with:
           file: ./backend/coverage.xml
           flags: backend
@@ -107,18 +115,13 @@ jobs:
           cd frontend
           npm ci
 
-      - name: Run linter
-        run: |
-          cd frontend
-          npm run lint || true
-
       - name: Build frontend
         run: |
           cd frontend
           npm run build
 
       - name: Upload build artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: frontend-build
           path: frontend/dist
@@ -172,39 +175,3 @@ jobs:
           push: true
           tags: ${{ steps.meta-frontend.outputs.tags }}
           labels: ${{ steps.meta-frontend.outputs.labels }}
-
-  # Deploy to Production
-  deploy:
-    name: Deploy to Production
-    runs-on: ubuntu-latest
-    needs: [docker-build]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Deploy to Liara
-        env:
-          LIARA_API_TOKEN: ${{ secrets.LIARA_API_TOKEN }}
-        run: |
-          npm install -g @liara/cli
-          liara deploy --api-token="$LIARA_API_TOKEN" --app="enginner-taskboard" --no-app-logs
-
-      - name: Run migrations on production
-        env:
-          LIARA_API_TOKEN: ${{ secrets.LIARA_API_TOKEN }}
-        run: |
-          liara shell --api-token="$LIARA_API_TOKEN" --app="enginner-taskboard" --command="python manage.py migrate"
-
-      - name: Collect static files
-        env:
-          LIARA_API_TOKEN: ${{ secrets.LIARA_API_TOKEN }}
-        run: |
-          liara shell --api-token="$LIARA_API_TOKEN" --app="enginner-taskboard" --command="python manage.py collectstatic --noinput"
-
-      - name: Send deployment notification
-        if: success()
-        run: |
-          echo "✅ Deployment successful!"
-          echo "🚀 Application deployed to: https://enginner-taskboard.liara.run"
