--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,13 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
-      POSTGRES_DB: ${POSTGRES_DB:-taskboard_db}
-      POSTGRES_USER: ${POSTGRES_USER:-taskboard_user}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-taskboard_pass}
+      POSTGRES_DB: ${POSTGRES_DB:-taskboard}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-taskboard_user}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -42,10 +42,9 @@ services:
       dockerfile: Dockerfile
     container_name: taskboard_backend
     command: >
-      sh -c "python manage.py wait_for_db &&
-             python manage.py migrate &&
+      sh -c "python manage.py migrate &&
              python manage.py collectstatic --noinput &&
-             python manage.py runserver 0.0.0.0:8000"
+             gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 3"
     volumes:
       - ./backend:/app
       - static_volume:/app/staticfiles
@@ -53,12 +52,16 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DEBUG=True
-      - DATABASE_URL=postgresql://${POSTGRES_USER:-taskboard_user}:${POSTGRES_PASSWORD:-taskboard_pass}@db:5432/${POSTGRES_DB:-taskboard_db}
+      - DEBUG=${DEBUG:-True}
+      - POSTGRES_DB=${POSTGRES_DB:-taskboard}
+      - POSTGRES_USER=${POSTGRES_USER:-postgres}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/1
       - SECRET_KEY=${SECRET_KEY:-django-insecure-dev-key-change-in-production}
-      - ALLOWED_HOSTS=*
+      - ALLOWED_HOSTS=${ALLOWED_HOSTS:-*}
     depends_on:
       db:
         condition: service_healthy
@@ -76,36 +79,18 @@ services:
     volumes:
       - ./backend:/app
     environment:
-      - DEBUG=True
-      - DATABASE_URL=postgresql://${POSTGRES_USER:-taskboard_user}:${POSTGRES_PASSWORD:-taskboard_pass}@db:5432/${POSTGRES_DB:-taskboard_db}
+      - DEBUG=${DEBUG:-True}
+      - POSTGRES_DB=${POSTGRES_DB:-taskboard}
+      - POSTGRES_USER=${POSTGRES_USER:-postgres}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/1
       - SECRET_KEY=${SECRET_KEY:-django-insecure-dev-key-change-in-production}
     depends_on:
       - db
       - redis
-      - backend
-    networks:
-      - taskboard_network
-
-  celery_beat:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    container_name: taskboard_celery_beat
-    command: celery -A config beat --loglevel=info
-    volumes:
-      - ./backend:/app
-    environment:
-      - DEBUG=True
-      - DATABASE_URL=postgresql://${POSTGRES_USER:-taskboard_user}:${POSTGRES_PASSWORD:-taskboard_pass}@db:5432/${POSTGRES_DB:-taskboard_db}
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/1
-      - SECRET_KEY=${SECRET_KEY:-django-insecure-dev-key-change-in-production}
-    depends_on:
-      - db
-      - redis
-      - backend
     networks:
       - taskboard_network
 
@@ -117,7 +102,7 @@ services:
         - VITE_API_URL=http://localhost:8000
     container_name: taskboard_frontend
     ports:
-      - "5173:80"
+      - "3000:80"
     depends_on:
       - backend
     networks:
