--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,36 @@
-# Database Configuration
-POSTGRES_DB=software_project_test
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=your_password_here
-DATABASE_URL=postgresql://postgres:password@db:5432/software_project_test
-
 # Django Settings
-SECRET_KEY=your_secret_key_here_generate_with_django
-DEBUG=False
-ALLOWED_HOSTS=yourdomain.com,www.yourdomain.com,localhost,127.0.0.1
+DEBUG=True
+SECRET_KEY=django-insecure-dev-key-change-in-production
+ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
+
+# Database Configuration
+POSTGRES_DB=taskboard
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
 
 # Redis & Celery
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/1
 
-# Email Configuration
-EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+# Email Configuration (Optional - for Admin Panel notifications)
+EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER=your_email@gmail.com
-EMAIL_HOST_PASSWORD=your_app_password
-DEFAULT_FROM_EMAIL=noreply@yourdomain.com
+EMAIL_HOST_USER=your-email@gmail.com
+EMAIL_HOST_PASSWORD=your-app-password
+DEFAULT_FROM_EMAIL=noreply@taskboard.com
+
+# CORS Settings
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:5173
+
+# Frontend URL
+FRONTEND_URL=http://localhost:3000
+
+# Production Settings (uncomment for production)
+# DEBUG=False
+# SECRET_KEY=your-super-secret-production-key-here
+# ALLOWED_HOSTS=yourdomain.com,www.yourdomain.com
+# EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
