--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,146 @@
 # Python
 __pycache__/
 *.py[cod]
-*.sqlite3
-db.sqlite3
-venv/
-.venv/
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+PIPFILE.lock
 
 # Django
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
 staticfiles/
 media/
+*.pot
+
+# Testing
+.pytest_cache/
+.coverage
+.coverage.*
+htmlcov/
+coverage.xml
+*.cover
+.hypothesis/
+.tox/
+.nox/
+
+# Virtual environments
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+.venv/
 
 # Node
 frontend/node_modules/
 frontend/dist/
+frontend/build/
+frontend/.vite/
+frontend/coverage/
+node_modules/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# VSCode / IDE
+# IDE
 .vscode/
 .idea/
+*.swp
+*.swo
+*~
+.DS_Store
+*.sublime-project
+*.sublime-workspace
 
+# Environment files - CRITICAL SECURITY
 .env
+.env.*
+!.env.example
+*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Docker
+docker-compose.override.yml
+.dockerignore
+
+# Secrets and certificates - CRITICAL SECURITY
+*.pem
+*.key
+*.cert
+*.crt
+*.p12
+*.pfx
+secrets/
+certs/
+ssl/
+
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Backup files
+*.bak
+*.swp
+*.tmp
+*~
+
+# Logs
+logs/
+*.log
+
+# Database
+*.sqlite
+*.sqlite3
+*.db
+
+# Compiled files
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Package files
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Pre-commit
+.secrets.baseline
