--- a/.env.example
+++ b/.env.example
@@ -1,36 +1,89 @@
-# Django Settings
+# ==============================================================================
+# DATABASE CONFIGURATION
+# ==============================================================================
+POSTGRES_DB=taskboard_db
+POSTGRES_USER=taskboard_user
+POSTGRES_PASSWORD=CHANGE_THIS_TO_STRONG_PASSWORD_MIN_16_CHARS
+DATABASE_URL=postgresql://taskboard_user:CHANGE_PASSWORD@db:5432/taskboard_db
+
+# ==============================================================================
+# DJANGO SETTINGS - ⚠️ CRITICAL FOR PRODUCTION
+# ==============================================================================
+# Generate a new secret key using: python -c "from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())"
+SECRET_KEY=CHANGE_THIS_MINIMUM_50_CHARACTERS_RANDOM_STRING_USE_DJANGO_GENERATOR
+
+# ⚠️ MUST BE False IN PRODUCTION
 DEBUG=True
-SECRET_KEY=django-insecure-dev-key-change-in-production
+
+# ⚠️ PRODUCTION: Set to your actual domain (e.g., yourdomain.com,www.yourdomain.com)
 ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0
 
-# Database Configuration
-POSTGRES_DB=taskboard
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
-POSTGRES_HOST=db
-POSTGRES_PORT=5432
+# ⚠️ PRODUCTION: Set to your frontend domain
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 
-# Redis & Celery
-CELERY_BROKER_URL=redis://redis:6379/0
-CELERY_RESULT_BACKEND=redis://redis:6379/1
+# ==============================================================================
+# REDIS & CELERY CONFIGURATION
+# ==============================================================================
+REDIS_PASSWORD=CHANGE_THIS_REDIS_PASSWORD_MIN_16_CHARS
+CELERY_BROKER_URL=redis://:CHANGE_PASSWORD@redis:6379/0
+CELERY_RESULT_BACKEND=redis://:CHANGE_PASSWORD@redis:6379/1
 
-# Email Configuration (Optional - for Admin Panel notifications)
+# ==============================================================================
+# EMAIL CONFIGURATION - ⚠️ CONFIGURE FOR PRODUCTION
+# ==============================================================================
 EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+# For production, use SMTP:
+# EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
-EMAIL_HOST_USER=your-email@gmail.com
-EMAIL_HOST_PASSWORD=your-app-password
-DEFAULT_FROM_EMAIL=noreply@taskboard.com
+EMAIL_HOST_USER=your_email@domain.com
+EMAIL_HOST_PASSWORD=your_app_specific_password
+DEFAULT_FROM_EMAIL=noreply@yourdomain.com
 
-# CORS Settings
-CORS_ALLOWED_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,http://localhost:5173
+# ==============================================================================
+# FRONTEND CONFIGURATION
+# ==============================================================================
+# ⚠️ PRODUCTION: Change to your actual API URL
+VITE_API_URL=http://localhost:8000/api
 
-# Frontend URL
-FRONTEND_URL=http://localhost:3000
+# ==============================================================================
+# SECURITY SETTINGS - ⚠️ ENABLE ALL IN PRODUCTION
+# ==============================================================================
+# Set to True when using HTTPS in production
+SECURE_SSL_REDIRECT=False
+SESSION_COOKIE_SECURE=False
+CSRF_COOKIE_SECURE=False
+SECURE_BROWSER_XSS_FILTER=True
+SECURE_CONTENT_TYPE_NOSNIFF=True
+X_FRAME_OPTIONS=DENY
+SECURE_HSTS_SECONDS=31536000
+SECURE_HSTS_INCLUDE_SUBDOMAINS=True
+SECURE_HSTS_PRELOAD=True
 
-# Production Settings (uncomment for production)
-# DEBUG=False
-# SECRET_KEY=your-super-secret-production-key-here
-# ALLOWED_HOSTS=yourdomain.com,www.yourdomain.com
-# EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+# ==============================================================================
+# LOGGING
+# ==============================================================================
+LOG_LEVEL=INFO
+
+# ==============================================================================
+# PRODUCTION DEPLOYMENT (Optional)
+# ==============================================================================
+# SENTRY_DSN=https://your-sentry-dsn
+# AWS_ACCESS_KEY_ID=your_aws_access_key
+# AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+# AWS_STORAGE_BUCKET_NAME=your_bucket_name
+
+# ==============================================================================
+# ⚠️⚠️⚠️ IMPORTANT SECURITY NOTES ⚠️⚠️⚠️
+# ==============================================================================
+# 1. NEVER commit the actual .env file to Git
+# 2. Generate a NEW SECRET_KEY for production (minimum 50 characters)
+# 3. Use STRONG passwords (minimum 16 characters with special chars)
+# 4. Set DEBUG=False in production
+# 5. Set ALLOWED_HOSTS to your actual domain(s)
+# 6. Enable all SSL/Security settings when using HTTPS
+# 7. Change ALL default passwords before deployment
+# 8. Use environment-specific secrets for different environments
+# 9. Rotate secrets regularly
+# 10. Use a secrets manager for production (e.g., AWS Secrets Manager, HashiCorp Vault)
