--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,103 +1,190 @@
-version: '3.8'
+version: '3.9'
 
 services:
   db:
     image: postgres:15-alpine
-    container_name: taskboard_db
+    container_name: taskboard_prod_db
+    restart: always
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data_prod:/var/lib/postgresql/data
+      - ./backups:/backups
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_INITDB_ARGS: "-E UTF8 --locale=en_US.UTF-8"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 10s
       timeout: 5s
       retries: 5
+      start_period: 30s
     networks:
-      - taskboard_network
+      - taskboard_prod_network
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 1G
+        reservations:
+          cpus: '0.5'
+          memory: 512M
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   redis:
     image: redis:7-alpine
-    container_name: taskboard_redis
-    command: redis-server --appendonly yes
+    container_name: taskboard_prod_redis
+    restart: always
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}
     volumes:
-      - redis_data:/data
+      - redis_data_prod:/data
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ["CMD", "redis-cli", "--no-auth-warning", "-a", "${REDIS_PASSWORD}", "ping"]
       interval: 10s
       timeout: 3s
       retries: 5
+      start_period: 20s
     networks:
-      - taskboard_network
+      - taskboard_prod_network
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 512M
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    container_name: taskboard_backend
+      args:
+        - ENVIRONMENT=production
+    image: taskboard_backend:${TAG:-latest}
+    container_name: taskboard_prod_backend
+    restart: always
     command: >
       sh -c "python manage.py collectstatic --noinput &&
-             python manage.py migrate &&
-             gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 4 --timeout 120"
+             python manage.py migrate --noinput &&
+             gunicorn config.wsgi:application \
+               --bind 0.0.0.0:8000 \
+               --workers 4 \
+               --worker-class gthread \
+               --threads 2 \
+               --timeout 120 \
+               --max-requests 1000 \
+               --max-requests-jitter 50 \
+               --access-logfile - \
+               --error-logfile - \
+               --log-level info"
     volumes:
-      - static_volume:/app/staticfiles
-      - media_volume:/app/media
+      - static_volume_prod:/app/staticfiles
+      - media_volume_prod:/app/media
+    environment:
+      - DEBUG=False
+      - DJANGO_SETTINGS_MODULE=config.settings
+      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
+      - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://:${REDIS_PASSWORD}@redis:6379/1
+      - SECRET_KEY=${SECRET_KEY}
+      - ALLOWED_HOSTS=${ALLOWED_HOSTS}
+      - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS}
+      - SECURE_SSL_REDIRECT=${SECURE_SSL_REDIRECT:-True}
+      - SESSION_COOKIE_SECURE=${SESSION_COOKIE_SECURE:-True}
+      - CSRF_COOKIE_SECURE=${CSRF_COOKIE_SECURE:-True}
+      - SECURE_HSTS_SECONDS=${SECURE_HSTS_SECONDS:-31536000}
+    depends_on:
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/api/health/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s
+    networks:
+      - taskboard_prod_network
+    deploy:
+      resources:
+        limits:
+          cpus: '2.0'
+          memory: 2G
+        reservations:
+          cpus: '1.0'
+          memory: 1G
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "50m"
+        max-file: "5"
+
+  celery_worker:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    image: taskboard_backend:${TAG:-latest}
+    container_name: taskboard_prod_celery_worker
+    restart: always
+    command: celery -A config worker --loglevel=info --concurrency=4 --max-tasks-per-child=1000
     environment:
       - DEBUG=False
       - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/1
+      - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://:${REDIS_PASSWORD}@redis:6379/1
       - SECRET_KEY=${SECRET_KEY}
-      - ALLOWED_HOSTS=${ALLOWED_HOSTS}
     depends_on:
       db:
         condition: service_healthy
       redis:
         condition: service_healthy
     networks:
-      - taskboard_network
-
-  celery_worker:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    container_name: taskboard_celery_worker
-    command: celery -A config worker --loglevel=info --concurrency=4
-    volumes:
-      - ./backend:/app
-    environment:
-      - DEBUG=False
-      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/1
-      - SECRET_KEY=${SECRET_KEY}
-    depends_on:
-      - redis
-      - db
-    networks:
-      - taskboard_network
+      - taskboard_prod_network
+    deploy:
+      resources:
+        limits:
+          cpus: '1.0'
+          memory: 1G
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "20m"
+        max-file: "3"
 
   celery_beat:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    container_name: taskboard_celery_beat
+    image: taskboard_backend:${TAG:-latest}
+    container_name: taskboard_prod_celery_beat
+    restart: always
     command: celery -A config beat --loglevel=info
-    volumes:
-      - ./backend:/app
     environment:
       - DEBUG=False
       - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
-      - CELERY_BROKER_URL=redis://redis:6379/0
-      - CELERY_RESULT_BACKEND=redis://redis:6379/1
+      - CELERY_BROKER_URL=redis://:${REDIS_PASSWORD}@redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://:${REDIS_PASSWORD}@redis:6379/1
       - SECRET_KEY=${SECRET_KEY}
     depends_on:
-      - redis
-      - db
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     networks:
-      - taskboard_network
+      - taskboard_prod_network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   frontend:
     build:
@@ -105,38 +192,69 @@ services:
       dockerfile: Dockerfile
       args:
         - VITE_API_URL=${VITE_API_URL}
-    container_name: taskboard_frontend
+        - NODE_ENV=production
+    image: taskboard_frontend:${TAG:-latest}
+    container_name: taskboard_prod_frontend
+    restart: always
     volumes:
-      - frontend_build:/app/dist
+      - frontend_build_prod:/app/dist
     networks:
-      - taskboard_network
+      - taskboard_prod_network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   nginx:
     image: nginx:alpine
-    container_name: taskboard_nginx
+    container_name: taskboard_prod_nginx
+    restart: always
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - static_volume:/static:ro
-      - media_volume:/media:ro
-      - frontend_build:/usr/share/nginx/html:ro
+      - ./nginx/prod.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
+      - static_volume_prod:/static:ro
+      - media_volume_prod:/media:ro
+      - frontend_build_prod:/usr/share/nginx/html:ro
+      - nginx_logs:/var/log/nginx
     depends_on:
-      - backend
-      - frontend
+      backend:
+        condition: service_healthy
+      frontend:
+        condition: service_started
     networks:
-      - taskboard_network
+      - taskboard_prod_network
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "50m"
+        max-file: "5"
 
 volumes:
-  postgres_data:
-  redis_data:
-  static_volume:
-  media_volume:
-  frontend_build:
+  postgres_data_prod:
+    driver: local
+  redis_data_prod:
+    driver: local
+  static_volume_prod:
+    driver: local
+  media_volume_prod:
+    driver: local
+  frontend_build_prod:
+    driver: local
+  nginx_logs:
+    driver: local
 
 networks:
-  taskboard_network:
+  taskboard_prod_network:
     driver: bridge
+    ipam:
+      config:
+        - subnet: 172.20.0.0/16
