--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -3,37 +3,16 @@ DJANGO_SETTINGS_MODULE = config.settings
 python_files = tests.py test_*.py *_tests.py
 python_classes = Test*
 python_functions = test_*
-
 addopts = 
-    --verbose
-    --strict-markers
-    --tb=short
-    --cov=.
-    --cov-report=html
-    --cov-report=term-missing
-    --cov-fail-under=80
-    --maxfail=5
     --reuse-db
-
+    --nomigrations
+    --create-db
+    --tb=short
+    -v
+    --strict-markers
+    --disable-warnings
+testpaths = .
 markers =
-    slow: marks tests as slow (deselect with '-m "not slow"')
+    slow: marks tests as slow
     integration: marks tests as integration tests
-    performance: marks tests as performance tests
-    auth: marks tests related to authentication
-    tasks: marks tests related to tasks
-    api: marks tests for API endpoints
-
-testpaths = 
-    accounts/tests
-    tasks/tests
-    tests
-
-norecursedirs = 
-    .git
-    .tox
-    dist
-    build
-    *.egg
-    migrations
-    staticfiles
-    media
+    unit: marks tests as unit tests
