refactor: update config files for new 3-tier settings structure

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,39 +1,18 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = config.settings
+DJANGO_SETTINGS_MODULE = config.settings.test
 python_files = tests.py test_*.py *_tests.py
 python_classes = Test*
 python_functions = test_*
-
 addopts = 
-    --verbose
-    --strict-markers
-    --tb=short
-    --cov=.
-    --cov-report=html
-    --cov-report=term-missing
-    --cov-fail-under=80
-    --maxfail=5
     --reuse-db
-
+    --no-migrations
+    --ds=config.settings.test
+    -v
+    --tb=short
+    --strict-markers
+    --disable-warnings
+testpaths = tests
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests
-    performance: marks tests as performance tests
-    auth: marks tests related to authentication
-    tasks: marks tests related to tasks
-    api: marks tests for API endpoints
-
-testpaths = 
-    accounts/tests
-    tasks/tests
-    tests
-
-norecursedirs = 
-    .git
-    .tox
-    dist
-    build
-    *.egg
-    migrations
-    staticfiles
-    media
+    unit: marks tests as unit tests
